removed copy from footer

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
   </main>
   <footer>
     <div class="content_wrapper">
-      <p class="footer_copy">Copyright &copy; 2021 EPAM</p>
+      <p class="footer_copy">Copyright &copy; 2021</p>
     </div>
   </footer>
 </body>
